fix paySuccess img url

--- a/week5/stylesheets/scss/pages/_paySuccess.scss
+++ b/week5/stylesheets/scss/pages/_paySuccess.scss
@@ -1,6 +1,6 @@
 .check{
     margin-top: 30px;
-    background-image: url(../../../img/paySuccess_banner.jpg);
+    background-image: url(../../img/paySuccess_banner.jpg);
     background-repeat: no-repeat;
     height: 460px;
     background-size: cover;
