--- a/week5/stylesheets/css/all.css
+++ b/week5/stylesheets/css/all.css
@@ -493,7 +493,7 @@ a {
 
 .check {
   margin-top: 30px;
-  background-image: url(../../../img/paySuccess_banner.jpg);
+  background-image: url(../../img/paySuccess_banner.jpg);
   background-repeat: no-repeat;
   height: 460px;
   background-size: cover;
