--- a/week7/stylesheets/scss/bootstrap/_buttons.scss
+++ b/week7/stylesheets/scss/bootstrap/_buttons.scss
@@ -27,7 +27,7 @@
   &:focus,
   &.focus {
     outline: 0;
-    box-shadow: $btn-focus-box-shadow;
+    // box-shadow: $btn-focus-box-shadow;
   }
 
   // Disabled comes first so active can properly restyle
