--- a/week7/stylesheets/scss/bootstrap/_pagination.scss
+++ b/week7/stylesheets/scss/bootstrap/_pagination.scss
@@ -18,7 +18,8 @@
   &:hover {
     z-index: 2;
     color: $pagination-hover-color;
-    text-decoration: none;
+    // text-decoration: none;
+    text-decoration: underline;
     background-color: $pagination-hover-bg;
     border-color: $pagination-hover-border-color;
   }
@@ -26,7 +27,7 @@
   &:focus {
     z-index: 3;
     outline: $pagination-focus-outline;
-    box-shadow: $pagination-focus-box-shadow;
+    // box-shadow: $pagination-focus-box-shadow;
   }
 }
 
