--- a/week7/stylesheets/scss/bootstrap/_variables.scss
+++ b/week7/stylesheets/scss/bootstrap/_variables.scss
@@ -64,26 +64,34 @@ $colors: map-merge(
   $colors
 );
 
-$primary:       $blue !default;
-$secondary:     $gray-600 !default;
+$primary:     #AC8A46; //$blue !default;
+$primaryDark: #916000;
+$secondary:   #000000; //$gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
-$light:         $gray-100 !default;
-$dark:          $gray-800 !default;
+$light:       #E0E0E0; //$gray-100 !default;
+$dark:        #8D8D8D; //$gray-800 !default;
+$navDark:     #707070;
+$white:       white;
+$none:          transparent;
 
 $theme-colors: () !default;
 $theme-colors: map-merge(
   (
     "primary":    $primary,
+    "primaryDark":$primaryDark,
     "secondary":  $secondary,
     "success":    $success,
     "info":       $info,
     "warning":    $warning,
     "danger":     $danger,
     "light":      $light,
-    "dark":       $dark
+    "dark":       $dark,
+    "navDark":    $navDark,
+    "white":      $white,
+    "none":       $none
   ),
   $theme-colors
 );
@@ -138,11 +146,20 @@ $spacers: () !default;
 $spacers: map-merge(
   (
     0: 0,
-    1: ($spacer * .25),
-    2: ($spacer * .5),
-    3: $spacer,
-    4: ($spacer * 1.5),
-    5: ($spacer * 3)
+    1: ($spacer * .25), //4px
+    2: ($spacer * .5),  //8px
+    3: ($spacer * .75), //12px
+    4: $spacer,         //16px
+    5: ($spacer * 1.25),//20px
+    6: ($spacer * 1.5), //24px
+    7: ($spacer * 2.25),//36px
+    8: ($spacer * 3),   //48px
+    9: ($spacer * 3.25),//52px
+    30: (30px),
+    40: ($spacer * 2.5), //40px
+    60: ($spacer * 3.75),//60px
+    80: (80px),
+    100: (100px)
   ),
   $spacers
 );
@@ -292,12 +309,12 @@ $font-weight-bolder:          bolder !default;
 $font-weight-base:            $font-weight-normal !default;
 $line-height-base:            1.5 !default;
 
-$h1-font-size:                $font-size-base * 2.5 !default;
-$h2-font-size:                $font-size-base * 2 !default;
-$h3-font-size:                $font-size-base * 1.75 !default;
-$h4-font-size:                $font-size-base * 1.5 !default;
-$h5-font-size:                $font-size-base * 1.25 !default;
-$h6-font-size:                $font-size-base !default;
+$h1-font-size:                $font-size-base * 2.5 !default; //40px
+$h2-font-size:                $font-size-base * 2 !default; //32px
+$h3-font-size:                $font-size-base * 1.75 !default; //28px
+$h4-font-size:                $font-size-base * 1.5 !default; //24px
+$h5-font-size:                $font-size-base * 1.25 !default; //20px
+$h6-font-size:                $font-size-base !default; //16px
 
 $headings-margin-bottom:      $spacer / 2 !default;
 $headings-font-family:        null !default;
@@ -473,8 +490,8 @@ $input-bg:                              $white !default;
 $input-disabled-bg:                     $gray-200 !default;
 
 $input-color:                           $gray-700 !default;
-$input-border-color:                    $gray-400 !default;
-$input-border-width:                    $input-btn-border-width !default;
+$input-border-color:                    $primaryDark; //$gray-400 !default;
+$input-border-width:                    2px; //$input-btn-border-width !default;
 $input-box-shadow:                      inset 0 1px 1px rgba($black, .075) !default;
 
 $input-border-radius:                   $border-radius !default;
@@ -786,7 +803,7 @@ $dropdown-header-padding:           $dropdown-padding-y $dropdown-item-padding-x
 
 // Pagination
 
-$pagination-padding-y:              .5rem !default;
+$pagination-padding-y:              0;//.5rem !default;
 $pagination-padding-x:              .75rem !default;
 $pagination-padding-y-sm:           .25rem !default;
 $pagination-padding-x-sm:           .5rem !default;
@@ -794,21 +811,21 @@ $pagination-padding-y-lg:           .75rem !default;
 $pagination-padding-x-lg:           1.5rem !default;
 $pagination-line-height:            1.25 !default;
 
-$pagination-color:                  $link-color !default;
+$pagination-color:                  $secondary;//$link-color !default;
 $pagination-bg:                     $white !default;
 $pagination-border-width:           $border-width !default;
-$pagination-border-color:           $gray-300 !default;
+$pagination-border-color:           transparent;//$gray-300 !default;
 
 $pagination-focus-box-shadow:       $input-btn-focus-box-shadow !default;
 $pagination-focus-outline:          0 !default;
 
-$pagination-hover-color:            $link-hover-color !default;
-$pagination-hover-bg:               $gray-200 !default;
-$pagination-hover-border-color:     $gray-300 !default;
+$pagination-hover-color:            $primary;//$link-hover-color !default;
+$pagination-hover-bg:               transparent;//$gray-200 !default;
+$pagination-hover-border-color:     transparent;//$gray-300 !default;
 
-$pagination-active-color:           $component-active-color !default;
-$pagination-active-bg:              $component-active-bg !default;
-$pagination-active-border-color:    $pagination-active-bg !default;
+$pagination-active-color:           $primary;//$component-active-color !default;
+$pagination-active-bg:              transparent;//$component-active-bg !default;
+$pagination-active-border-color:    transparent;//$pagination-active-bg !default;
 
 $pagination-disabled-color:         $gray-600 !default;
 $pagination-disabled-bg:            $white !default;
@@ -825,10 +842,10 @@ $jumbotron-bg:                      $gray-200 !default;
 // Cards
 
 $card-spacer-y:                     .75rem !default;
-$card-spacer-x:                     1.25rem !default;
+$card-spacer-x:                     0;//1.25rem !default;
 $card-border-width:                 $border-width !default;
 $card-border-radius:                $border-radius !default;
-$card-border-color:                 rgba($black, .125) !default;
+$card-border-color:                 transparent;//rgba($black, .125) !default;
 $card-inner-border-radius:          subtract($card-border-radius, $card-border-width) !default;
 $card-cap-bg:                       rgba($black, .03) !default;
 $card-cap-color:                    null !default;
