add meta & set typeface、highlight color

--- a/week7/stylesheets/css/all.css
+++ b/week7/stylesheets/css/all.css
@@ -14188,6 +14188,15 @@ h3 {
     border-color: #dee2e6;
   }
 }
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Microsoft JhengHei", Roboto, "Helvetica Neue", Arial, sans-serif;
+}
+
+::selection {
+  color: white;
+  background-color: #AC8A46;
+}
+
 .logo {
   background-size: auto;
   display: block;
