--- a/HTML course final/stylesheet/all.css
+++ b/HTML course final/stylesheet/all.css
@@ -186,7 +186,7 @@ a {
 }
 
 .banner {
-  background-image: url(../../../img/banner.png);
+  background-image: url(../img/banner.png);
   background-size: cover;
   height: 346px;
   display: flex;
