--- a/HTML course final/stylesheet/scss/pages/_index.scss
+++ b/HTML course final/stylesheet/scss/pages/_index.scss
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url(../../../img/banner.png);
+    background-image: url(../img/banner.png);
     background-size: cover;
     height: 346px;
     display: flex;
