--- a/jQuery course final/stylesheet/scss/all.scss
+++ b/jQuery course final/stylesheet/scss/all.scss
@@ -3,6 +3,7 @@
 @import "config/reset";
 @import "config/mixin";
 @import "config/init";
+@import "config/helpers";
 
 // layout
 @import "layout/header";
